# bhoodevi-warehouse-intelligence-platform

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: c99a61622a9f_create_users_table.py  cdef4c027ca2_create_warehouses_table.py
app/: dependencies.py  dependencies_admin.py  main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: auth.py  warehouse.py
app/core/: config.py  logging.py  security.py
app/crud/: __init__.py  user.py  warehouse.py
app/db/: session.py
app/models/: __init__.py  user.py  warehouse.py
app/schemas/: __init__.py  user.py  warehouse.py
docs/architecture/: AI_AGENTS.md  DATABASE_DESIGN.md  SYSTEM_ARCHITECTURE.md
docs/product/: PRD.md  PRODUCT_VISION.md  ROADMAP.md
